--- a/index.ipynb
+++ b/index.ipynb
@@ -155,7 +155,8 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def favorite_destination():\n",
-    "    travel_destinations.append()\n",
+    "    favorite = 'mada'\n",
+    "    travel_destinations.append(favorite)\n",
     "    return 'madagascar'"
    ]
   },
