Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -155,9 +155,9 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def favorite_destination():\n",
-    "    favorite = 'mada'\n",
+    "    favorite = 'madagascar'\n",
     "    travel_destinations.append(favorite)\n",
-    "    return 'madagascar'"
+    "    return favorite"
    ]
   },
   {
