--- a/index.ipynb
+++ b/index.ipynb
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -198,14 +198,14 @@
        "'madagascar'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
-    "#favorite_destination()\n",
+    "favorite_destination()\n",
     "travel_destinations[-1] # 'madagascar'"
    ]
   },
