--- a/index.ipynb
+++ b/index.ipynb
@@ -224,6 +224,7 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
+    "    capitalized_destinatins\n",
     "    for elem in travel_destinations:\n",
     "        "
    ]
