Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -226,7 +226,7 @@
     "def capitalize_countries():\n",
     "    capitalized_destinations = []\n",
     "    for elem in travel_destinations:\n",
-    "        "
+    "        capitalized_destinations.append()"
    ]
   },
   {
