--- a/index.ipynb
+++ b/index.ipynb
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +227,7 @@
     "    capitalized_destinations = []\n",
     "    for elem in travel_destinations:\n",
     "        capitalized_destinations.append(elem.title())\n",
-    "    return capt"
+    "    return capitalized_destinations"
    ]
   },
   {
